# wasi-nn-edge-demo

./: Cargo.toml  README.md  example-input.json
models/: model.onnx
src/: lib.rs
