[package]
name = "wasi-nn-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.36.0", features = ["bitflags"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

wasi = "0.14"
wasi-nn-demo-lib = { path = "../wasi-nn-demo-lib" }

[lib]
crate-type = ["cdylib"]
